update sample media
